--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 					<a href="https://www.linkedin.com/in/fil-sammy-abawag/" target="_blank" class="text-decoration-none text-light fs-1">
 						<i class="fab fa-linkedin-in"></i>
 					</a>
-					<a href="https://github.com/yourprofile" target="_blank" class="text-decoration-none text-light fs-1">
+					<a href="https://github.com/filsammy" target="_blank" class="text-decoration-none text-light fs-1">
 						<i class="fab fa-github"></i>
 					</a>
 					<a href="https://www.facebook.com/filsammy/" target="_blank" class="text-decoration-none text-light fs-1">
